--- a/templates/pacient_new.html
+++ b/templates/pacient_new.html
@@ -101,12 +101,93 @@
                                 </div>
                             </div>
                             <br>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                                <div class="col-md-8">
+                                    Tiene Heladera?:
+                                      <select name="has_refrigerator" required>
+                                          <option value="">-</option>
+                                          <option value="1">SI</option>
+                                          <option value="0">NO</option>
+                                    </select> 
+                                </div>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                                <div class="col-md-8">
+                                    Tiene Electricidad?:
+                                      <select name="has_electricity" required>
+                                          <option value="">-</option>
+                                          <option value="1">SI</option>
+                                          <option value="0">NO</option>
+                                    </select> 
+                                </div>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                                <div class="col-md-8">
+                                    Tiene Mascota(s)?:
+                                      <select name="has_pet" required>
+                                          <option value="">-</option>
+                                          <option value="1">SI</option>
+                                          <option value="0">NO</option>
+                                    </select> 
+                                </div>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                                <div class="col-md-8">
+                                    Tipo de Vivienda:
+                                      <select name="home_type" required>
+                                          <option value="">-</option>
+                                          <option value="casa">Casa</option>
+                                          <option value="departamento">Departamento</option>
+                                          <option value="hotel">Hotel</option>
+                                          <option value="no_tiene_hogar">No tiene hogar</option>
+
+                                    </select> 
+                                </div>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                                <div class="col-md-8">
+                                    Tipo de Calefaccion:
+                                      <select name="heating_type" required>
+                                          <option value="">-</option>
+                                          <option value="estufa">Estufa</option>
+                                          <option value="aire">Aire Acondicionado</option>
+                                          <option value="nada">Nada</option>
+
+                                    </select> 
+                                </div>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                                <div class="col-md-8">
+                                    Tipo de Agua:
+                                      <select name="water_type" required>
+                                          <option value="">-</option>
+                                          <option value="potable">Agua Potable</option>
+
+                                    </select> 
+                                </div>
+                            </div>
+
+
+
+
 
                             <div class="form-group">
                                 <div class="col-md-12 text-center">
                                     <button type="submit"  id='btnSubmit'>Agregar paciente</button>
                                 </div>
                             </div>
+
                         </fieldset>
                     </form>
                 </div>
